--- a/resources/help/index.html
+++ b/resources/help/index.html
@@ -6,8 +6,8 @@
 {{block 'main'}}
 <div class="container">
   <div class="head-box">
-    <div class="title">{{sys.nameCH||"悠悠助手"}}</div>
-    <div class="label">{{sys.name||"yoyo-plugin (插件群:991709221)"}}</div>
+    <div class="title">{{sys.nameCH}}</div>
+    <div class="label">{{sys.name}} (插件群:991709221)</div>
   </div>
   {{each helpGroup group}}
   {{set len = group?.list?.length || 0 }}
