--- a/resources/hero/atlas.html
+++ b/resources/hero/atlas.html
@@ -34,6 +34,18 @@
         </div>
     </div>
     {{each type type}}
+
+    {{ if type=='nickname' }}
+    <div class="hero-nickname main-box">
+        {{ if nicknames?.length }}
+            {{ nicknames.join('、') }}
+        {{else}}
+            <div>当前角色没有别名，请<mark>{{rulePrefix}}设置{{name}}别名</mark></div>
+        {{/if}}
+    </div>
+    {{/if}}
+
+
     {{ if type=='voice' && charData.characterVoice }}
     <div class="hero-words  main-box">
         {{each charData.characterVoice item index}}
