--- a/resources/task-item/list.html
+++ b/resources/task-item/list.html
@@ -18,7 +18,7 @@
     {{each taskItems taskItem idx}}
     <div class="task-item">
         <img class="task-img"   src="{{pluResPath}}/UI/{{taskItem.icon}}" alt="">
-        <div class="task-text">{{task.name}}</div>
+        <div class="task-text">{{taskItem.name}}</div>
     </div>
     {{/each}}
 </div>
