任务道具图标下载

--- a/resources/task-item/list.html
+++ b/resources/task-item/list.html
@@ -1,7 +1,7 @@
 {{extend layout}}
 
 {{block 'css'}}
-<link rel="stylesheet" type="text/css" href="{{pluResPath}}/task/list.css" />
+<link rel="stylesheet" type="text/css" href="{{pluResPath}}/task-item/list.css" />
 {{/block}}
 
 
