--- a/resources/help/index.html
+++ b/resources/help/index.html
@@ -6,7 +6,7 @@
 {{block 'main'}}
 <div class="container">
   <div class="head-box">
-    <div class="title">{{sys.nameCH}}</div>
+    <div class="title">{{sys.title}}</div>
     <div class="label">{{sys.name}} (插件群:991709221)</div>
   </div>
   {{each helpGroup group}}
